[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.32.0", features = ["full"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tungstenite = "0.20.1"
futures = "0.3.28"
url = "2.4.1"
async-tungstenite = {version = "0.23.0", features = ["async-std-runtime", "async-tls"]}
diesel = {version = "2.1.2", features = ["postgres"]}
dotenv = "0.15.0"
